# example-axum

./: .gitignore  Cargo.toml  memo.md
.http/: test.http
db/: schema.sql
src/: database.rs  initialize.rs  main.rs  router.rs
src/database/: mod.rs
src/handler/: mod.rs
src/initialize/: load_config.rs  setup_logger.rs
src/utils/: file_operation.rs  mod.rs  time_string.rs
